# Titan-satellite-

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
changemaster/: __init__.py
changemaster/core/: __init__.py  config.py  exceptions.py  hardware.py  logging_setup.py
changemaster/engines/: __init__.py  base.py  results.py  uncertainty.py
changemaster/engines/classical/: cva.py  fusion.py  irmad_change.py  morphology.py  pca_kmeans.py  ratio_diff.py  thresholding.py
changemaster/gui/: __init__.py
changemaster/io_engine/: __init__.py  base_reader.py  hdf_reader.py  landsat_reader.py  metadata.py  netcdf_reader.py  raster_reader.py  safe_reader.py  simple_reader.py  tiled_access.py  writer.py
changemaster/preprocessing/: __init__.py  _common.py  harmonize.py  pipeline.py  quality.py
changemaster/preprocessing/coregistration/: __init__.py  area_based.py  coarse.py  evaluator.py  feature_based.py  pyramid.py  transforms.py
changemaster/preprocessing/masking/: __init__.py  (+5 more)
changemaster/sensors/: __init__.py  profiles.py
scripts/: titan_info.py  titan_inspect.py  titan_preprocess.py
tests/: conftest.py  test_config.py  test_coregistration_matching.py  test_coregistration_transforms.py  test_exceptions.py  test_hardware.py  test_harmonize_common.py  test_masking.py  test_metadata.py  test_pipeline.py  test_preprocessing_quality.py  test_radiometric.py  test_readers_hdf_netcdf.py  test_readers_raster.py  test_readers_safe_landsat.py  test_readers_simple.py  test_sar.py  test_sensor_profiles.py  test_tiled_access.py  test_writer.py
(+22 files in other folders)
